Backend changes: Removed mapper tests, added Builder pattern for Film entity, refactor FilmServiceTest methods